Resolve tag colour contrasts: - Update tag color for cancelled bookings and unviewed requests

--- a/app/webpacker/stylesheets/application.scss
+++ b/app/webpacker/stylesheets/application.scss
@@ -71,7 +71,3 @@ $govuk-grid-widths: (
 .govuk-accordion__controls {
   margin-bottom: 1em;
 }
-.govuk-input,
-input[type="checkbox"] {
-  width: 15%;
-}
